<resources>
    <string name="app_name">All Video Downloader</string>
    <string name="sintony" translatable="false">sintony-regular.otf</string>
    <string name="developer_email" translatable="false">infusiblecoder@gmail.com</string>
    <string name="privacy_message"><b>We are committed to protecting your privacy</b> \n\n We collect the minimum amount of information about you that is commensurate with providing you with a satisfactory service. This policy indicates the type of processes that may result in data being collected about you. Your use of this website gives us the right to collect that information. \n\n  <b>Information Collected</b> \n\n  We may collect any or all of the information that you give us depending on the type of transaction you enter into, including your name, address, telephone number, and email address, together with data about your use of the website. Other information that may be needed from time to time to process a request may also be collected as indicated on the website. \n\n <b>Information Use</b> \n\n We use the information collected primarily to process the task for which you visited the website. Data collected in the UK is held in accordance with the Data Protection Act. All reasonable precautions are taken to prevent unauthorised access to this information. This safeguard may require you to provide additional forms of identity should you wish to obtain information about your account details. \n\n <b>Cookies</b> \n\n Your Internet browser has the in-built facility for storing small files - \"cookies\" - that hold information which allows a website to recognise your account. Our website takes advantage of this facility to enhance your experience. You have the ability to prevent your computer from accepting cookies but, if you do, certain functionality on the website may be impaired. \n\n <b>Disclosing Information</b> \n\n We do not disclose any personal information obtained about you from this website to third parties unless you permit us to do so by ticking the relevant boxes in registration or competition forms. We may also use the information to keep in contact with you and inform you of developments associated with us. You will be given the opportunity to remove yourself from any mailing list or similar device. If at any time in the future we should wish to disclose information collected on this website to any third party, it would only be with your knowledge and consent.   We may from time to time provide information of a general nature to third parties - for example, the number of individuals visiting our website or completing a registration form, but we will not use any information that could identify those individuals.   In addition Dummy may work with third parties for the purpose of delivering targeted behavioural advertising to the Dummy website. Through the use of cookies, anonymous information about your use of our websites and other websites will be used to provide more relevant adverts about goods and services of interest to you. For more information on online behavioural advertising and about how to turn this feature off, please visit infusiblecoder.com \n\n <b>Changes to this Policy</b> \n\n Any changes to our Privacy Policy will be placed here and will supersede this version of our policy. We will take reasonable steps to draw your attention to any changes in our policy. However, to be on the safe side, we suggest that you read this document each time you use the website to ensure that it still meets with your approval. \n\n <b>Contacting Us</b> \n\n If you have any questions about our Privacy Policy, or if you want to know what information we have collected about you, please email us at infusiblecoder@gmail.com. You can also correct any factual errors in that information or require us to remove your details form any list under our control.</string>
    <string name="gallery_name">Gallery</string>
    <string name="fbAdmobAppId" translatable="false">2826467664143009</string>
    <string name="fbAdmobBanner" translatable="false">236055237840153_245082356937441</string>
    <string name="fbAdmobInterstitial" translatable="false">2826467664143009_2828393957283713</string>
    <string name="appbar_scrolling_view_behavior" translatable="false">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="str_developed_with_love">Developed with ❤ in <b>Pakistan</b></string>
    <string name="info_permission_denied">Sorry permission denied. We can not open this app on your device, please try again later.</string>
    <string name="format_request_permision">%1$s will need to have read/write permission your sdcard to save Files.Do you want to grant it?</string>
    <string name="AdmobAppId" translatable="false">ca-app-pub-9243738527809292~4560010891</string>
    <string name="AdmobBanner" translatable="false">ca-app-pub-9243738527809292/1635777738</string>
    <string name="AdmobInterstitial" translatable="false">ca-app-pub-9243738527809292/6696532729</string>
    <string name="AdmobRewardID" translatable="false">ca-app-pub-9243738527809292/9821545043</string>
    <string name="SharingVideoSubject">Sharing Downloaded Video</string>
    <string name="SharingVideoTitle">Sharing Video</string>
    <string name="SharingVideoBody">Sharing Video File</string>
    <string name="RateAppTitle">Like this app?</string>
    <string name="RateApp">Share the love by rating 5 stars in Play Store. 😘</string>
    <string name="how_to_download_videos">How to download videos?</string>
    <string name="share_the_video_to_aio_video_downloader_app_or">• Share the video to All Video Downloader app (or)</string>
    <string name="simply_copy_the_link_of_any_video">• Simply copy the link of any video</string>
    <string name="make_sure_auto_download_service_is_running">• Make sure \'Auto Download Service\' is running</string>
    <string name="paste_video_url_here">Paste Video URL here...</string>
    <string name="download">Download</string>
    <string name="options">Options</string>
    <string name="no_watermark">No Watermark</string>
    <string name="remove_watermark_from_downloaded_video">Remove watermark from downloaded video</string>
    <string name="auto_download">Auto Download</string>
    <string name="simply_copy_the_link_of_video_to_start_download">Simply copy the link of video to start download</string>
    <string name="currently_supports">Currently Supports</string>
    <string name="tiktok">TikTok</string>
    <string name="facebook">Facebook</string>
    <string name="instagram">Instagram</string>
    <string name="youtube">Youtube</string>
    <string name="dailymotion">Dailymotion</string>
    <string name="topbuzz">TopBuzz</string>
    <string name="twitter">Twitter</string>
    <string name="viemo">Viemo</string>
    <string name="message_title">Message Title</string>
    <string name="message_content">Message Content</string>
    <string name="auto_download_not_working">Auto Download not working?</string>
    <string name="make_sure_app_is_running_in_background">• Make sure app is running in the background</string>
    <string name="restart_the_app_if_that_doesn_t_work">• Restart the app if that doesn\'t work</string>
    <string name="contact_developer_before_leaving_a_negative_review">• Contact developer before leaving a negative review</string>
    <string name="author">Author</string>
    <string name="music_author">Music - Author</string>
    <string name="description_goes_here">Description Goes Here</string>
    <string name="starting_download">Starting download...</string>
    <string name="watch">WATCH</string>
    <string name="download_fragment">Download</string>
    <string name="gallery_fragment">Gallery</string>
    <string name="grant_option">Grant</string>
    <string name="permission_title">Permission Required!</string>
    <string name="cancel_option">Cancel</string>
    <string name="rate_dialog">RATE</string>
    <string name="later_btn">LATER</string>
    <string name="auto_download_title_notification">Auto Download Service</string>
    <string name="auto_download_title_notification_start">Copy the link of video to start download</string>
    <string name="stop_btn">Stop</string>
    <string name="restarted_service">Service restarted</string>
    <string name="downloading_des">Downloading</string>
    <string name="url_not_suppotr">This url not supported or no media found!</string>
    <string name="we_cant_allow">We cannot allow to download videos form this website.</string>
    <string name="genarating_download_link">Generating download link</string>
    <string name="somthing">Something went wrong!</string>
    <string name="delete_confirm">\"Selected video will be permanently deleted. This action cannot be undone. \"</string>
    <string name="don_start">Downloading Start!</string>
    <string name="somth_video_wrong">\"Something went wrong while playing video! Please try again \"</string>
    <string name="went_shARRE">\"Something went wrong while sharing video! Please try again \"</string>
    <string name="error_occ">Error occurred!</string>
    <string name="install_fb">Install facebook app</string>
    <string name="install_tik">Install Tiktok app</string>
    <string name="install_ins">Install Instagaram app</string>
    <string name="enter_valid">Please Enter a valid URI</string>
    <string name="aio_auto">All Auto Download</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="StatusSaver">Status Saver</string>
    <string name="video_downloader_gallery">Video Downloader Gallery</string>
    <string name="status_saver_gallery">Status Saver Gallery</string>
    <string name="appnotinstalled">WhatsApp Is Not Installed Kindly Install It</string>
    <string name="privacy">PRIVACY POLICY</string>
    <string name="language">Language</string>
    <string name="open_whatsapp">Open WhatsApp</string>
    <string name="rate_us">Rate Us</string>
    <string name="privacytxt">Privacy</string>
    <string name="delete">Delete</string>
    <string name="note_for_android_10_or_above_gallery_will_not_work_so_you_can_find_the_downloaded_files_in_your_downloads_directory"><b><u>Note:</u></b> If your gallery is not showing LIKEE videos then access it from FileManager </string>
    <string name="select_quality">Select Quality</string>
    <string name="noApp_f">No application found to open this file.</string>
    <string name="file_del">File was Deleted</string>
    <string name="are_sure_del">Are you sure you want to delete this file?</string>
    <string name="del_tit">DELETE?</string>
    <string name="nn">No</string>
    <string name="yyy">Yes</string>
    <string name="vidd">\" video?\"</string>
    <string name="selected_i">\" Selected\"</string>
    <string name="choose">Choose</string>
    <string name="watch_arr">Watch</string>
    <string name="del_arr">Delete</string>
    <string name="share_arr">Share</string>
    <string name="saved_to">\"Saved to: \"</string>
    <string name="refre">Refreshed!</string>
    <string name="pernecessory">Permission necessary</string>
    <string name="write_neesory">Write Storage permission is necessary to Download Images and Videos!!!</string>
    <string name="yes">Yes</string>
    <string name="stor_saver">Download</string>
    <string name="se1">STEP 1</string>
    <string name="se_2">STEP 2</string>
    <string name="se_3">STEP 3</string>
    <string name="tap_wp">Tap to open WhatsApp.</string>
    <string name="vie_rec">View Recent Stories and Open Status Saver.</string>
    <string name="dow_sto">Download Stories you want!</string>
    <string name="invalid_url">Invalid Video URL or Check Internet Connection</string>
    <string name="savedstt">Download </string>
    <string name="install_ytd">Install Youtube app</string>
    <string name="extrafeatures">Extras</string>
    <string name="open_whatsapp_new">Whatsapp</string>
    <string name="main_name">Main</string>
</resources>